fix generate annex protocol